added all admin autherization and user routes
