# internal/router/route.go
@@ -8,7 +8,7 @@ import (
 )
 
 // SetupRoutes func
-func SetupRoutes(app *fiber.App, userHandler *handler.UserHandler) {
+func SetupRoutes(app *fiber.App, userHandler *handler.UserHandler, adminHandler *handler.AdminHandler) {
 	// Health check
 	app.Get("/health", func(c *fiber.Ctx) error {
 		return c.JSON(fiber.Map{"status": "ok"})
@@ -25,14 +25,20 @@ func SetupRoutes(app *fiber.App, userHandler *handler.UserHandler) {
 
 	// grouping
 	api := app.Group("/api/v1")
-	v1 := api.Group("/user")
-
-	// routes
-	v1.Post("/token", userHandler.CreateUserAccessToken)
-	v1.Get("/", middleware.Protected(), userHandler.GetAllUsers)
-	v1.Get("/:id", middleware.Protected(), userHandler.GetUserByID)
-	v1.Post("/", middleware.Protected(), userHandler.CreateUser)
-	// v1.Put("/:id", handler.UpdateUser)
+	{
+		v1 := api.Group("/user")
+		v1.Post("/token", userHandler.CreateUserAccessToken)
+		v1.Get("/get_user", middleware.Protected(), userHandler.GetUserByEmail)
+		v1.Post("/", middleware.Protected(), userHandler.CreateUser)
+		// v1.Get("/:id", middleware.Protected(), userHandler.GetUserByID)
+		// v1.Put("/:id", handler.UpdateUser)
+	}
+	{
+		admin := api.Group("/admin")
+		admin.Get("/login", middleware.AdminProtected(), adminHandler.AdminLogin)
+		admin.Get("/:id", middleware.AdminProtected(), adminHandler.GetUserByID)
+		admin.Get("/get_users", middleware.AdminProtected(), adminHandler.GetAllUsers)
+	}
 
 	// handle unavailable route
 	app.Use(func(c *fiber.Ctx) error {
